--- a/index.html
+++ b/index.html
@@ -1,168 +1,1 @@
-﻿<!DOCTYPE html>
-<!--HTML5 doctype-->
-
-<html lang="zh-cmn-Hans">
-<head>
-    <meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
-    <title>世界杯</title>
-    <link rel="stylesheet" type="text/css" media="screen" href="third/weiui/weui.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="third/swiper/swiper.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/common.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/index.css" />
-</head>
-<body>
-<div id="header">
-<div id="header_top">
-	<div id="header_img">
-		<a href="choselogin.html" id="header_a"><img src="img/user_light.png"/></a>
-	</div>
-	<span>赛报</span>
-</div>
-<div id="header_nav">
-	<div class="slide-box">
-		<div class="slide-item"><span>世界杯</span></div>
-		<div class="slide-item"><span>欧冠</span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-		<div class="slide-item"><span>世界杯</span></div>
-		<div class="slide-item"><span>欧冠</span></span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-		<div class="slide-item"><span>欧冠</span></div>
-		<div class="slide-item"><span>亚冠</span></div>
-		<div class="slide-item"><span>意甲</span></div>
-		<div class="slide-item"><span>英超</span></div>
-	</div>
-</div>
- </div>
-    <div id="index_page_conent">
-        <div class="index_page">
-            <div class="myswiper">
-                <div class="swiper-container">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/nav1.png" alt="First slide" >
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/nav1.png"  alt="First slide">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/nav1.png"  alt="First slide">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题天下足球标题天下足球标题天下足球标题天下足球标题</div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div>
-                                <img src="img/nav1.png" alt="First slide">
-                                <div class="my_swiper_bg"></div>
-                                <div class="my_swiper_text">天下足球标题</div>
-                            </div>
-                        </div>
-                    </div>
- 
-                    <div class="swiper-pagination"></div>
-                </div>
-            </div>
-            <div class="weui-cell" onclick="goDetails()">
-                <div class="weui-cell__hd my_wei_hd">
-                    <img src="img/test.jpg">
-                </div>
-                <div class="weui-cell__bd my_wei_bd">
-                    <p>天下足球天下足球天下足球天下足球天下足球天下足球</p>
-                    <p class="grand">
-                        <span>足球战报</span><span>评论2评论2</span>
-                    </p>
-                </div>
-            </div>
-            <div class="weui-cell" onclick="goDetails()">
-                <div class="weui-cell__hd my_wei_hd">
-                    <img src="img/test.jpg">
-                </div>
-                <div class="weui-cell__bd my_wei_bd">
-                    <p>天下足球天下足球天下足球天下足球天下足球天下足球</p>
-                    <p class="grand">
-                        <span>足球战报</span><span>评论2评论2</span>
-                    </p>
-                </div>
-            </div>			
-        </div>
-    </div>
-    <div class="weui-loadmore" id="load">
-        <i class="weui-loading"></i>
-        <span class="weui-loadmore__tips">正在加载</span>
-    </div>
-    <div id="footer">
-	<ul id="footer_content">
-            <li class="footer_list">
-                <a href="index.html" class="my_footer_a my_footer_a_home">
-                    <img class="act_img" src="img/caidan1.png"/>
-                    <img class="no_act footer_list_t" src="img/caidan01.png"/>
-                    <span>赛报赛报</span>
-                </a>
-            </li>
-            <li class="footer_list">
-                <a href="ranking.html" class="my_footer_a my_footer_a_bang">
-                    <img class="act_img"  src="img/caidan2.png" style="width: 21px">
-                    <img class="no_act" src="img/caidan02.png" style="width: 21px">
-                    <span>榜单</span>
-                </a>
-            </li>
-            <li class="footer_list footer_list_sai">
-                <a href="quiz.html"class="my_footer_a my_footer_sai">
-                    <img class="act_img"  src="img/caidan3.png" style="width: 48px;margin-bottom: 8px">
-                    <img class="no_act" src="img/caidan03.png" style="width: 48px;margin-bottom: 8px">
-                    <span>赛事</span>
-                </a>
-            </li>
-            <li class="footer_list">
-                <a href="mall.html" class="my_footer_a my_footer_show">
-                    <img class="act_img"  src="img/caidan4.png" style="width: 22px">
-                    <img class="no_act" src="img/caidan04.png" style="width: 22px">
-                    <span>积分商城</span>
-                </a>
-                </li>
-            <li class="footer_list">
-                <a href="user.html" class="my_footer_a my_footer_my">
-                <img class="act_img" src="img/caidan5.png" style="width: 19px;margin-bottom: 8px">
-                <img class="no_act" src="img/user_light.png" style="width: 23px;margin-bottom: 3px;margin-top:8px;">
-                <span>我的</span>
-                </a>
-            </li>
-        </ul>	
-    </div>
-</body>
-</html>
-<!-- third-第三方库(必须) begin -->
-<script src="third/jquery/jquery.min.js"></script>
-<script src="third/swiper/swiper.min.js"></script>
-<script>
-// 启动轮播器
-var swiper = new Swiper('.swiper-container', {
-    // navigation: {
-    //     nextEl: '.swiper-button-next',
-    //     prevEl: '.swiper-button-prev',
-    // },
-    autoplay: {
-        delay: 800,
-        stopOnLastSlide: false,
-        disableOnInteraction: false,
-    },
-    loop: true,
-    pagination: {
-        el: '.swiper-pagination',
-    }
-})
-</script>
+<!DOCTYPE html><html style="height: 100%;"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>李棠寅的前端工作</title><link href=./static/css/app.a444eab07f186373919bcba801176a4e.css rel=stylesheet></head><body style="height: 100%"><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.37b1bf3da323dc6c2014.js></script><script type=text/javascript src=./static/js/app.8c63e5e58eabfc058fbb.js></script></body></html>
