--- a/index.html
+++ b/index.html
@@ -1,1 +1,92 @@
-<!DOCTYPE html><html style="height: 100%;"><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,user-scalable=no"><title>李棠寅的前端工作</title><link href=./static/css/app.a444eab07f186373919bcba801176a4e.css rel=stylesheet></head><body style="height: 100%"><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.37b1bf3da323dc6c2014.js></script><script type=text/javascript src=./static/js/app.8c63e5e58eabfc058fbb.js></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Swiper demo</title>
+    <!-- Link Swiper's CSS -->
+    <link rel="stylesheet" href="css/swiper.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1, minimum-scale=1.0, maximum-scale=1.0">
+    <!-- Demo styles -->
+    <style>
+    body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color:#000;
+        margin: 0;
+        padding: 0;
+    }
+    .swiper-slide img{
+        width: 100%;
+        height: 300px;
+    }
+    .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        
+        /* Center slide text vertically */
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+        display: flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        -webkit-justify-content: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        -webkit-align-items: center;
+        align-items: center;
+    }
+    body,html{
+        height: 100%;
+        width: 100%
+    }
+    body{
+        
+        background: url(img/bg.png) ;
+        background-size: 50% 50%;
+    }
+    </style>
+</head>
+<body>
+    <!-- Swiper -->
+    <div class="swiper-container" style="margin-top:40%;">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <img src="img/01.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/02.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/03.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/04.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/05.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/06.png">
+            </div>
+            <div class="swiper-slide">
+                <img src="img/07.png">
+            </div>
+        </div>
+    </div>
+
+    <!-- Swiper JS -->
+    <script src="js/swiper.min.js"></script>
+
+    <!-- Initialize Swiper -->
+    <script>
+    var swiper = new Swiper('.swiper-container',{
+        loop: true,
+        autoplay : 2000, 
+    });
+    </script>
+</body>
+</html>
