--- a/index.html
+++ b/index.html
@@ -329,7 +329,12 @@
             background-size: 8%;
             background-position: center center;
             position: relative;
-            top: -5px
+            top: -5px;
+            -webkit-transform: rotate(90deg);
+            -moz-transform: rotate(90deg);
+            -o-transform: rotate(90deg);
+            -ms-transform: rotate(90deg);
+            transform: rotate(90deg);
         }
     }
 </style>
