--- a/index.html
+++ b/index.html
@@ -204,18 +204,21 @@
                 <div class="row">
                     <div class="col-md-3">
                         <div class="thumbnail">
-                            <img class="s_img" src="img/server_01.jpg" alt="...">
+                                <img class="s_img" src="img/server_02.jpg" alt="...">
+
+                            
                             <div class="caption">
-                                <h3>采购管理</h3>
+                                <h3>智能采购</h3>
                                 <p>智能采购，供货商管理，采购订单，采购入库,餐厅必备食材360度全方位供应，满足你的个性化采购需求，无需再去超市补货</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="thumbnail">
-                            <img class="s_img" src="img/server_02.jpg" alt="...">
+
+                                <img class="s_img" src="img/server_01.jpg" alt="...">
                             <div class="caption">
-                                <h3>客户运营</h3>
+                                <h3>智慧点餐</h3>
                                 <p>商机管理，客户管理，促销管理，营销工具,为你的餐厅提供专业的互联网营销支持，互联网+不是梦</p>
                             </div>
                         </div>
@@ -224,7 +227,7 @@
                         <div class="thumbnail">
                             <img class="s_img" src="img/server_03.jpg" alt="...">
                             <div class="caption">
-                                <h3>库存管理</h3>
+                                <h3>餐饮商学院</h3>
                                 <p>入库/出库/盘点，仓库调拨，扫码出库，发货核验,流水电子账单每日出具，价格透明，分店账目明细一目了然，时刻掌握后厨损耗情况</p>
                             </div>
                         </div>
@@ -233,7 +236,7 @@
                         <div class="thumbnail">
                             <img class="s_img" src="img/server_04.jpg" alt="...">
                             <div class="caption">
-                                <h3>品牌餐饮</h3>
+                                <h3>餐饮托管</h3>
                                 <p>私人定制后厨标准化流程，一对一服务，尽享VIP尊贵体</p>
                             </div>
                         </div>
