--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         #banner {
             /* height: calc(100% - 60px);    */
             height: 100%;
-            background: url(img/truck.jpg) no-repeat;
+            background: url(img/tractor.jpg) no-repeat;
             background-size: cover;
             background-position: bottom;
             color: #fff;
@@ -180,7 +180,8 @@
             <div class="row ">
                 <div class="col-md-12">
                     <div class="banner_content">
-                        <p class="banner_text_titel">总厨网，一站式采购平台</p>
+                            <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">一站式采购平台</p>
                         <p class="banner_text_titel">让餐饮没有难做的生意</p>
                         <p class="banner_text_en">There is no hard business</p>
                         <div>
@@ -324,7 +325,7 @@
             text-indent: 0px
         }
         .banner_content {
-            padding-top: 85%
+            padding-top: 75%
         }
         .my_difference_ico {
             height: 60px;
