--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 
         #weserver .caption h3 {
             text-align: center;
+            color: #62B134;
         }
 
         #guanyu p {
@@ -192,22 +193,20 @@
         </div>
     </div>
     <div id="guanyu">
-        <h1 style="text-align:center;margin: 60px 0;color: #ff8821;margin-top: 0px;padding-top:80px ">• 关于总厨网 •</h1>
-        <p>提供一站式食材供应链服务，打造“透明”、“靠谱”的食材管家。</p>
+        <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">• 关于总厨网 •</h1>
+        <p class="phone_p" style="margin-top: -15px;">依托移动互联网技术，通过整合生鲜供应链上下游资源实现领环节一站式职能采购服务。</p>
+        <p class="phone_p"style="margin-top: -26px;">同时专业的餐饮管理团队为中小餐饮店提供开店选址、智能点餐、运营管控、服务培训、餐饮托管等全方位的解决方案服务助推中国餐饮发展。</p>
     </div>
     <div id="server">
-
         <div id="weserver">
             <div>
-                <h1 style="text-align:center;margin: 60px 0;color: #ff8821;margin-top: 0px;padding-top:80px ">• 我们的服务 •</h1>
+                <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">• 我们的服务 •</h1>
             </div>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-3">
                         <div class="thumbnail">
                                 <img class="s_img" src="img/server_02.jpg" alt="...">
-
-                            
                             <div class="caption">
                                 <h3>智能采购</h3>
                                 <p>智能采购，供货商管理，采购订单，采购入库,餐厅必备食材360度全方位供应，满足你的个性化采购需求，无需再去超市补货</p>
@@ -215,30 +214,29 @@
                         </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="thumbnail">
-
-                                <img class="s_img" src="img/server_01.jpg" alt="...">
-                            <div class="caption">
-                                <h3>智慧点餐</h3>
-                                <p>商机管理，客户管理，促销管理，营销工具,为你的餐厅提供专业的互联网营销支持，互联网+不是梦</p>
-                            </div>
-                        </div>
+                            <div class="thumbnail">
+                                    <img class="s_img" style="width:75%" src="img/xueyua_02.png" alt="...">
+                                    <div class="caption">
+                                        <h3>餐饮商学院</h3>
+                                        <p>为中小餐饮店提供餐饮资讯、服务培训、出品研发、在线管控、在线学习、人才招聘、餐饮托管等相关解决方案服务</p>
+                                    </div>
+                                </div>
                     </div>
                     <div class="col-md-3">
-                        <div class="thumbnail">
-                            <img class="s_img" src="img/server_03.jpg" alt="...">
-                            <div class="caption">
-                                <h3>餐饮商学院</h3>
-                                <p>入库/出库/盘点，仓库调拨，扫码出库，发货核验,流水电子账单每日出具，价格透明，分店账目明细一目了然，时刻掌握后厨损耗情况</p>
+                            <div class="thumbnail">
+                                    <img class="s_img" src="img/server_01.jpg" alt="...">
+                                <div class="caption">
+                                    <h3>智慧点餐</h3>
+                                    <p>为餐饮店提供智慧点餐系统，包涵扫码点餐、在线支付、排队等位、粉丝管理、出品管控、营销推广、大数据分析等相关功能</p>
+                                </div>
                             </div>
-                        </div>
                     </div>
                     <div class="col-md-3">
                         <div class="thumbnail">
                             <img class="s_img" src="img/server_04.jpg" alt="...">
                             <div class="caption">
                                 <h3>餐饮托管</h3>
-                                <p>私人定制后厨标准化流程，一对一服务，尽享VIP尊贵体</p>
+                                <p>用专业的团队，帮助餐饮店运营管理服务，全店托管以及运营托管服务</p>
                             </div>
                         </div>
                     </div>
@@ -249,7 +247,7 @@
     <div id="difference">
         <div class="container-fluid">
             <div>
-                <h1 style="text-align:center;margin: 60px 0;color: #ff8821;margin-top: 0px;padding-top:80px ">• 我们和传统供应企业的区别
+                <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">• 我们和传统供应企业的区别
                     •
                 </h1>
             </div>
@@ -339,6 +337,9 @@
             -o-transform: rotate(90deg);
             -ms-transform: rotate(90deg);
             transform: rotate(90deg);
+        }
+        .phone_p{
+            padding: 0 25px;
         }
     }
 </style>
