--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -209,123 +208,228 @@
             </div>
         </div>
     </div>
-    <div id="guanyu">
-        <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">• 关于总厨网 •</h1>
-        <p class="phone_p" style="margin-top: -15px;">依托移动互联网技术，通过整合生鲜供应链上下游资源实现零环节一站式智能采购服务。</p>
-        <p class="phone_p" style="margin-top: -26px;">同时专业的餐饮管理团队为中小餐饮店提供开店选址、智能点餐、运营管控、服务培训、餐饮托管等全方位的解决方案服务。</p>
-    </div>
-    <div id="server">
-        <div id="weserver">
-            <div>
-                <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">• 我们的服务 •</h1>
-            </div>
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="thumbnail">
-                            <div class="service-icon">
-                                <img src="img/index_cai.png">
-                            </div>
-                            <div class="caption">
-                                <h3>智能采购</h3>
-                                <p>智能采购，供货商管理，采购订单，采购入库,餐厅必备食材360度全方位供应，满足你的个性化采购需求，无需再去超市补货</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="thumbnail">
-                            <div class="service-icon">
-                                <img src="img/index_xue.png" style="width: 71%; top: -4px; position: relative;"/>
-                            </div>
-                            <div class="caption">
-                                <h3 style="margin-top:2px">餐饮商学院</h3>
-                                <p>为中小餐饮店提供餐饮资讯、服务培训、出品研发、在线管控、在线学习、人才招聘、餐饮托管等相关解决方案服务</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="thumbnail">
-                            <div class="service-icon">
-                                <img src="img/index_diancan.png" />
-                            </div>
-                            <div class="caption">
-                                <h3>智慧点餐</h3>
-                                <p>为餐饮店提供智慧点餐系统，包涵扫码点餐、在线支付、排队等位、粉丝管理、出品管控、营销推广、大数据分析等相关功能</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="thumbnail">
-                            <div class="service-icon">
-                                <img src="img/index_tuoguan.png" />
-                            </div>
-                            <div class="caption">
-                                <h3>餐饮托管</h3>
-                                <p>用专业的团队，帮助餐饮店运营管理服务，全店托管以及运营托管服务</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="difference">
+
+
+    <div id="banner" style="background:url(img/13.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
-            <div>
-                <h1 style="text-align:center;margin: 60px 0;color: #62B134;margin-top: 0px;padding-top:80px ">
-                    • 我们和传统供应企业的区别
-                    •
-                </h1>
-            </div>
-            <div class="row">
-                <div class="col-md-5" style="font-weight: 400;    line-height: 28px;">我们不是采购经理的帮手</div>
-                <div class="col-md-2">
-                    <div class="my_difference_ico"></div>
-                </div>
-                <div class="col-md-5" style="color: #4d5269!important; font-weight: 600!important;    line-height: 28px;">我们是老板的食材管家</div>
-            </div>
-            <div class="row">
-                <div class="col-md-5" style="font-weight: 400;    line-height: 28px;">我们卖的不是食材本身</div>
-                <div class="col-md-2">
-                    <div class="my_difference_ico"></div>
-                </div>
-                <div class="col-md-5" style="color: #4d5269!important; font-weight: 600!important;    line-height: 28px;">我们给客户提供有效的解决方案</div>
-            </div>
-            <div class="row">
-                <div class="col-md-5" style="font-weight: 400;    line-height: 28px;">我们不做客户食材端利润的获取者</div>
-                <div class="col-md-2">
-                    <div class="my_difference_ico"></div>
-                </div>
-                <div class="col-md-5" style="color: #4d5269!important; font-weight: 600!important;    line-height: 28px;">我们与顾客一起共创终端价值</div>
-            </div>
-            <div class="row">
-                <div class="col-md-5" style="font-weight: 400;    line-height: 28px;">总厨网，一站式采购平台</div>
-                <div class="col-md-2">
-                    <div class="my_difference_ico"></div>
-                </div>
-                <div class="col-md-5" style="color: #4d5269!important; font-weight: 600!important;    line-height: 28px;">手机上的后厨仓库</div>
-            </div>
-        </div>
-    </div>
-    <div id="footer">
-        <div class="container-fluid" style="margin:0 auto">
-            <div class="row">
-                <div class="col-md-12" style="margin:0 auto">
-                    <div class="thumbnail" style="background:none;margin: 0 auto;text-align: center;margin-top: 100px;">
-                        <img src="img/zcw1.jpg">
-                        <div class="caption">
-                            <p>总厨网</p>
-                            <p style="margin-bottom: 0px;">深圳市当下云厨网络科技有限公司</p>
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="banner" style="background:url(img/14.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
                 <div class="col-md-12">
-                    <p>copyright © 2015-2018 粤ICP备17051649号-2 </p>
-                    <p style="margin-top:-8px">全国服务电话：400-661-3029</p>
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <div id="banner" style="background:url(img/03.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="banner" style="background:url(img/04.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="banner" style="background:url(img/05.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="banner" style="background:url(img/06.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="banner" style="background:url(img/07.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="banner" style="background:url(img/08.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="banner" style="background:url(img/09.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div id="banner" style="background:url(img/10.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div id="banner" style="background:url(img/11.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="banner" style="background:url(img/12.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+        <div class="container-fluid">
+            <div class="row ">
+                <div class="col-md-12">
+                    <div class="banner_content">
+                        <p class="banner_text_titel">总厨网</p>
+                        <p class="banner_text_titel">餐饮食材一站式采购服务平台</p>
+                        <p class="banner_text_titel">让餐饮没有难做的生意</p>
+                        <p class="banner_text_en">There is no hard business</p>
+                        <div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
 </body>
 
 </html>
