--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/13.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/13.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -229,7 +229,7 @@
 
 
 
-    <div id="banner" style="background:url(img/14.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/14.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -247,7 +247,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/03.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/03.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -265,7 +265,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/04.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/04.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -283,7 +283,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/05.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/05.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -301,7 +301,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/06.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/06.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -320,7 +320,7 @@
 
 
 
-    <div id="banner" style="background:url(img/07.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/07.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
@@ -338,7 +338,7 @@
     </div>
 
 
-    <div id="banner" style="background:url(img/08.jpg);height: 100%;background-size: 100% 100%;" class="img-responsive" alt="Responsive image">
+    <div id="banner" style="background:url(img/08.jpg);height: 100%;background-size: 100% 100%;background-size: cover;" class="img-responsive" alt="Responsive image">
         <div class="container-fluid">
             <div class="row ">
                 <div class="col-md-12">
