--- a/html/category_list.html
+++ b/html/category_list.html
@@ -44,7 +44,7 @@
                     <li onclick="selectmenuClick('left',this)">牛肉</li>
                 </ul>
             </div>
-            <div class="category_list_right ">
+            <div class="category_list_right bounceInLeft animated">
                 <div>
                     <div class="weui-grids">
                         <a href="javascript:;" class="weui-grid">
