--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
-<title>李朋去吃屎</title>
+<title></title>
 </head>
 <body>
     <div style="text-align:center"><img src="bd_logo1.png"></div>
