--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
-<!doctype html>
-<html>
-<head>
-<meta charset="utf-8">
-<link rel="icon" sizes="any" mask="" href="//www.baidu.com/img/baidu_85beaf5496f291521eb75ba38eacbd87.svg">
-<title></title>
-</head>
-<body>
-    <div style="text-align:center"><img src="bd_logo1.png"></div>
-    <div style="text-align:center"><input style="position: relative; height: 31px;   margin: 6px 0 0 7px;    background: transparent;  margin: 6px 0 0 7px;    font: 16px/18px arial;   width: 500px;" type="text"/><input style="width: 100px;height: 36px;  background: #3385ff;  border: none; font-size: 15px;   color: #fff;" type="button" value="百度一下"/></div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"><title>jl</title><link href=./static/css/app.5b45abb7c6656a395774d45108467f03.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.e9616317d8be2142ef74.js></script><script type=text/javascript src=./static/js/app.114e663af830129c264b.js></script></body></html>
