--- a/html/invitation.html
+++ b/html/invitation.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
-    <title>注册</title>
+    <title>丑板凳学生端下载</title>
     <link href="../css/weiui.css" rel="stylesheet" />
     <style>
         .top {
