--- a/html/register.html
+++ b/html/register.html
@@ -163,17 +163,18 @@
                 班群号：10032562
             </div>
             <div>
+                <!-- 注册表单 -->
                 <div class="weui-cells weui-cells_form">
                     <div class="weui-cell my_weui-cell">
                         <div class="weui-cell__bd my_weui_close">
                             <img src="../img/close@2x.png">
-                            <input class="weui-input my_weui_input" type="number" pattern="[0-9]*" placeholder="请输入qq号">
+                            <input class="weui-input my_weui_input" type="number" pattern="[0-9]*" placeholder="请输入手机号">
                         </div>
                     </div>
                     <div class="weui-cell weui-cell_vcode my_weui-cell">
 
                         <div class="weui-cell__bd">
-                            <input class="weui-input my_weui_input" type="tel" placeholder="请输入手机号">
+                            <input class="weui-input my_weui_input" type="tel" placeholder="验证码">
                         </div>
                         <div class="weui-cell__ft">
                             <button class="weui-vcode-btn">获取验证码</button>
@@ -183,9 +184,11 @@
             </div>
         </div>
         <div class="reg_bnt">
-            <div class="weui-btn weui-btn_block my_wei_bnt">确定</div>
+            <div class="weui-btn weui-btn_block my_wei_bnt" onclick="determineClick()">确定</div>
         </div>
-        <div class="determine successful" style="display: none">
+
+        <!-- 成功提示 -->
+        <div id="successful" class="determine" style="display: none">
             <div class="weui-mask"></div>
             <div class="determine_content">
                 <div class="determine_content_bg">
@@ -197,11 +200,11 @@
                 </div>
             </div>
             <div class="determine_content_close">
-                <img src="../img/tip_close@2x.png" />
+                <img src="../img/tip_close@2x.png" onclick="closeClick()" />
             </div>
         </div>
-
-        <div class="determine failure">
+        <!-- 失败提示 -->
+        <div id="failure" class="determine" style="display: none">
             <div class="weui-mask"></div>
             <div class="determine_content">
                 <div class="determine_content_bg">
@@ -213,10 +216,26 @@
                 </div>
             </div>
             <div class="determine_content_close">
-                <img src="../img/tip_close@2x.png" />
+                <img src="../img/tip_close@2x.png" onclick="closeClick()" />
             </div>
         </div>
     </div>
 </body>
 
 </html>
+<script>
+    //注册确定事件
+    function determineClick() {
+        var successful = document.getElementById('successful');
+        successful.style.display = 'block'
+    }
+
+    //关闭提示事件
+    function closeClick() {
+        var failure = document.getElementById('failure');
+        var successful = document.getElementById('successful');
+        failure.style.display = 'none'
+        successful.style.display = 'none'
+    }
+
+</script>
