--- a/html/register.html
+++ b/html/register.html
@@ -10,12 +10,14 @@
     <title>丑板凳学生注册</title>
     <link href="../css/weiui.css" rel="stylesheet" />
     <style>
+
         .reg_content {
             height: 100vh;
             width: 100vw;
             background: url(../img/login@2x.png) no-repeat;
             background-size: 100% 100%;
             position: relative;
+            font-size:14px 
         }
 
         .reg_content_text {
@@ -40,7 +42,9 @@
         .my_weui-cell {
             padding: 0px;
         }
-
+        .weui-cells{
+            margin-top:0px 
+        }
         .weui-cells:before {
             height: 0;
             border: 0px;
