--- a/html/register.html
+++ b/html/register.html
@@ -56,7 +56,7 @@
         }
 
         .weui-cell:before {
-            border-bottom: 2px solid #EEEEEE;
+            border-top: 2px solid #EEEEEE;
             left: 0px;
         }
 
