--- a/html/register.html
+++ b/html/register.html
@@ -16,7 +16,8 @@
             width: 100vw;
             background: url(../img/login@2x.png) no-repeat;
             background-size: 100% 100%;
-            position: relative;
+            position: fixed;
+            bottom: 0px;
             font-size:14px 
         }
 
