--- a/html/register.html
+++ b/html/register.html
@@ -10,10 +10,13 @@
     <title>丑板凳学生注册</title>
     <link href="../css/weiui.css" rel="stylesheet" />
     <style>
-
+        html,body{
+            height: 100%;
+            width: 100%;
+        }
         .reg_content {
-            height: 100vh;
-            width: 100vw;
+            height: 100%;
+            width: 100%;
             background: url(../img/login@2x.png) no-repeat;
             background-size: 100% 100%;
             position: fixed;
