--- a/html/register.html
+++ b/html/register.html
@@ -2,11 +2,8 @@
 <html>
 
 <head>
-    <meta name="viewport"
-        content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="format-detection" content="telephone=no" />
+        <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0,viewport-fit=cover">
+        <meta charset="UTF-8">
     <title>丑板凳学生注册</title>
     <link href="../css/weiui.css" rel="stylesheet" />
     <style>
