--- a/html/register.html
+++ b/html/register.html
@@ -18,7 +18,6 @@
             height: 100%;
             width: 100%;
             background: url(../img/login@2x.png) no-repeat;
-            background-size: 100vw 100vh;
             position: fixed;
             bottom: 0px;
             font-size:14px 
@@ -162,7 +161,7 @@
 </head>
 
 <body>
-    <div class="reg_content">
+    <div id="reg_content" class="reg_content">
         <div class="reg_content_text">
             <div class="reg_content_text_top">
                 我的小伙伴，我在丑板凳布置了有趣的作业，快接受我的邀请写作业吧！
@@ -233,7 +232,9 @@
 </html>
 <script>
     //固定底部背景
+    var reg_content = document.getElementById('reg_content');
 
+    reg_content.style['background-size'] = document.body.clientWidth+'px' + ' ' +document.body.clientHeight+'px'
 
     //注册确定事件
     function determineClick() {
