--- a/html/register.html
+++ b/html/register.html
@@ -40,6 +40,7 @@
         .my_weui_input {
             height: 50px;
             line-height: 50px;
+            font-size: 16px
         }
 
         .my_weui-cell {
@@ -191,7 +192,7 @@
             </div>
         </div>
         <div class="reg_bnt">
-            <div class="weui-btn weui-btn_block my_wei_bnt" onclick="determineClick()">确定</div>
+            <div class="weui-btn weui-btn_block my_wei_bnt" style="position: relative" onclick="determineClick()">确定</div>
         </div>
 
         <!-- 成功提示 -->
